--- a/forked files/1-homepage.html
+++ b/forked files/1-homepage.html
@@ -22,8 +22,8 @@
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-      crossorigin="anonymous">
-    </script>
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
@@ -41,7 +41,6 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <script src="scripts.js"></script>
   </head>
   <body class="body">
     <header class="header">
@@ -139,89 +138,108 @@
     <main class="main">
       <section class="quotes section d-flex align-items-center">
         <div class="container">
-          <div class="loader"></div>
           <div
             id="carouselExampleControls"
             class="carousel slide"
-            data-ride="carousel">
+            data-ride="carousel"
+          >
             <div class="carousel-inner">
-              <!-- Slides will be inserted here -->
+              <div class="carousel-item active">
+                <div class="row mx-auto align-items-center">
+                  <div class="col-12 col-sm-2 col-lg-2 offset-lg-1 text-center">
+                    <img
+                      src="images/profile_5.jpg"
+                      class="d-block align-self-center"
+                      alt="Carousel Pic 1"
+                    />
+                  </div>
+                  <div class="col-12 col-sm-7 offset-sm-2 col-lg-9 offset-lg-0">
+                    <div class="quote-text">
+                      <p class="text-white">
+                        « Those tutorials are concise and go straight to the
+                        point. I can’t think of a better place to learn smiling.
+                        And it’s so fun!
+                      </p>
+                      <h4 class="text-white font-weight-bold">Person Name</h4>
+                      <span class="text-white">weather presenter</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row mx-auto align-items-center">
+                  <div class="col-12 col-sm-2 col-lg-2 offset-lg-1 text-center">
+                    <img
+                      src="images/profile_5.jpg"
+                      class="d-block align-self-center"
+                      alt="Carousel Pic 1"
+                    />
+                  </div>
+                  <div class="col-12 col-sm-7 offset-sm-2 col-lg-9 offset-lg-0">
+                    <div class="quote-text">
+                      <p class="text-white">
+                        « Those tutorials are concise and go straight to the
+                        point. I can’t think of a better place to learn smiling.
+                        And it’s so fun!
+                      </p>
+                      <h4 class="text-white font-weight-bold">Person Name</h4>
+                      <span class="text-white">weather presenter</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row mx-auto align-items-center">
+                  <div class="col-12 col-sm-2 col-lg-2 offset-lg-1 text-center">
+                    <img
+                      src="images/profile_5.jpg"
+                      class="d-block align-self-center"
+                      alt="Carousel Pic 1"
+                    />
+                  </div>
+                  <div class="col-12 col-sm-7 offset-sm-2 col-lg-9 offset-lg-0">
+                    <div class="quote-text">
+                      <p class="text-white">
+                        « Those tutorials are concise and go straight to the
+                        point. I can’t think of a better place to learn smiling.
+                        And it’s so fun!
+                      </p>
+                      <h4 class="text-white font-weight-bold">Person Name</h4>
+                      <span class="text-white">weather presenter</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
             <a
-            class="carousel-control-prev arrow-left"
-            href="#carouselExampleControls"
-            role="button"
-            data-slide="prev"
-          >
-            <img
-              src="images/arrow_white_left.png"
-              alt="Quote Previous"
-              aria-hidden="true"
-            />
-            <span class="sr-only">Previous</span>
-          </a>
-          <a
-            class="carousel-control-next arrow-right"
-            href="#carouselExampleControls"
-            role="button"
-            data-slide="next"
-          >
-            <img
-              src="images/arrow_white_right.png"
-              alt="Quote Next"
-              aria-hidden="true"
-            />
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-    </section>
-    <!--Popular section-->
-    <section class="popular section d-flex align-items-center">
-      <div class="container">
-        <div class="loader"></div>
-        <header class="section-header">
-          <h2 class="text-center">
-            Most
-            <span class="main-color font-weight-bold">popular</span> tutorials
-          </h2>
-        </header>
-        <div
-          id="carouselExampleControls2"
-          class="carousel slide"
-          data-ride="carousel"
-        >
-          <div class="carousel-inner">
-            <!-- Slides will be inserted here -->
+              class="carousel-control-prev arrow-left"
+              href="#carouselExampleControls"
+              role="button"
+              data-slide="prev"
+            >
+              <img
+                src="images/arrow_white_left.png"
+                alt="Quote Previous"
+                aria-hidden="true"
+              />
+              <span class="sr-only">Previous</span>
+            </a>
+            <a
+              class="carousel-control-next arrow-right"
+              href="#carouselExampleControls"
+              role="button"
+              data-slide="next"
+            >
+              <img
+                src="images/arrow_white_right.png"
+                alt="Quote Next"
+                aria-hidden="true"
+              />
+              <span class="sr-only">Next</span>
+            </a>
           </div>
-          <a
-            class="carousel-control-prev arrow-left"
-            href="#carouselExampleControls2"
-            role="button"
-            data-slide="prev"
-          >
-            <img
-              src="images/arrow_black_left.png"
-              alt="Quote Previous"
-              aria-hidden="true"
-            />
-            <span class="sr-only">Previous</span>
-          </a>
-          <a
-            class="carousel-control-next arrow-right"
-            href="#carouselExampleControls2"
-            role="button"
-            data-slide="next"
-          >
-            <img
-              src="images/arrow_black_right.png"
-              alt="Quote Next"
-              aria-hidden="true"
-            />
-            <span class="sr-only">Next</span>
-          </a>
         </div>
-      </div>
-    </section>
-  </main>
-</body>
+      </section>
+    </main>
+  </body>
 </html>
