Misunderstood task0 fixed

--- a/2-homepage1.html
+++ b/2-homepage1.html
@@ -136,6 +136,7 @@
         </section>
       </div>
     </header>
+    <!--Quotes section-->
     <main class="main">
       <section class="quotes section d-flex align-items-center">
         <div class="container">
@@ -179,7 +180,7 @@
     <section class="popular section d-flex align-items-center">
       <div class="container">
         <div class="loader"></div>
-        <header class="section-header">
+        <header class="section-header text-center">
           <h2 class="text-center">
             Most
             <span class="main-color font-weight-bold">popular</span> tutorials
