My latest work, still trying to fix stuff

--- a/1-homepage.html
+++ b/1-homepage.html
@@ -180,6 +180,7 @@
           </a>
         </div>
     </section>
+    <!--Popular section-->
       <section class="popular section d-flex align-items-center">
         <div class="container">
           <header class="section-header">
@@ -2002,4 +2003,5 @@
       </div>
     </footer>
   </body>
+  <script src="scripts.js"></script>
 </html>
