--- a/2-homepage.html
+++ b/2-homepage.html
@@ -186,10 +186,9 @@
             <span class="main-color font-weight-bold">popular</span> tutorials
           </h2>
         </header>
-        <div class="card video-card">
+        <div class="card-video-group">
             <div class="d-flex justify-content-between mt-2">
-              <div class="position-relative d-flex align-items-center ">
-            <div class="d-flex align-items-center">
+              <div class="d-flex align-items-center">
             <div class="justify-content-between mt-2">
         <div
           id="carouselExampleControls2"
@@ -226,7 +225,6 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
-      </div>
         </div>
         </div>
       </div>
