Finally running as planned

--- a/1-homepage.html
+++ b/1-homepage.html
@@ -142,8 +142,8 @@
     </header>
     <!--Quotes section-->
     <main class="main">
-      <section class="quotes section d-flex align-items-center">
-        <div class="container">
+      <section class="quotes d-flex align-items-center">
+        <div class="container-lg">
           <div class="loader"></div>
           <div
             id="carouselExampleControls"
